Stop that page from dancing when scrollbars appear

--- a/app/stylesheets/partials/_layout.sass
+++ b/app/stylesheets/partials/_layout.sass
@@ -1,3 +1,6 @@
+html
+  overflow-y: scroll
+
 body
   font: 13px/1.231 sans-serif
   *font-size:small
